<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black"
        android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/submissionToolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_gravity="center_vertical"
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:minHeight="?actionBarSize"
                    android:padding="@dimen/appbar_padding"
                    android:src="@drawable/gads_header" />
            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/project_submission"
            android:textColor="@android:color/holo_orange_light"
            android:textSize="26dp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_margin="5dp"
            android:background="@drawable/side_gradient" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <EditText
            android:autofillHints="Abili"
            android:maxLines="1"
            android:id="@+id/firstName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:background="@drawable/round2"
            android:hint="@string/first_name"
            android:padding="15dp" />

        <EditText
            android:autofillHints="Isaac"
            android:maxLines="1"
            android:id="@+id/lastName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:background="@drawable/round2"
            android:hint="@string/last_name"
            android:padding="15dp" />

    </LinearLayout>

    <EditText
        android:autofillHints="abiliisaac@gmail.com"
        android:id="@+id/emailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round2"
        android:hint="@string/email_address"
        android:padding="15dp" />

    <EditText
        android:autofillHints="https://www.github/Abili"
        android:id="@+id/githubLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round2"
        android:hint="@string/git_hub_link"
        android:padding="15dp" />

    <Button
        android:layout_marginBottom="10dp"
        android:id="@+id/submitBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round_btn"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />
    </LinearLayout>
</ScrollView>