<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:orientation="horizontal"
    app:cardCornerRadius="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/learner_Image"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/learnerName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/leaner_name"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp">

                <TextView
                    android:textAlignment="textStart"
                    android:id="@+id/learnerHours"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ellipsize="marquee"
                    android:singleLine="true"
                    android:text="@string/leaner_hours"
                    android:textSize="14sp" />

                <TextView
                    android:textAlignment="textStart"
                    android:id="@+id/learnerCountry"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:ellipsize="marquee"
                    android:singleLine="true"
                    android:text="@string/leaner_country"
                    android:textSize="14sp" />
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>